
option java_outer_classname="BlockActivityEventResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message BlockActivityEventResponse 
{
	optional string uniqueKey = 1;
	optional string serverIP = 2;
	optional int64 timeoutInterval = 3;
	optional int32 port = 4;
}